DB-7693 Cleanup
Fix yarn-site.xml so that Yarn apps can run with less than 10% disk
space